Add job uptime API
