# backend/jobs/views.py
@@ -1,8 +1,9 @@
 """Jobs Views"""
 
 import logging
+from collections import Counter
 from rest_framework import viewsets, mixins, generics, status
-from rest_framework.decorators import action
+from rest_framework.decorators import action, permission_classes
 from rest_framework.response import Response
 from rest_framework.exceptions import NotFound
 from rest_framework.permissions import IsAuthenticated
@@ -83,6 +84,25 @@ class JobsViewSet(mixins.CreateModelMixin, mixins.ListModelMixin, mixins.UpdateM
                 return Response({"detail": "Job resumed"}, status=status.HTTP_200_OK)
             else:
                 return Response({"detail": "Job already in active state"}, status=status.HTTP_409_CONFLICT)
+        except Jobs.DoesNotExist:
+            raise NotFound
+
+    @action(methods=['get'], detail=True, permission_classes=[IsAuthenticated])
+    def uptime(self, request, **kwargs):
+        """Return job uptime (percentage)"""
+
+        try:
+            uuid = self.kwargs['uuid']
+            success_list = JobsHistory.objects.filter(
+                uuid=uuid).values_list('success', flat=True)
+
+            success_counter = Counter(success_list)
+
+            uptime = round(success_counter[True] /
+                           len(success_list) * 100.0, 2)
+
+            return Response({"uptime": uptime}, status=status.HTTP_200_OK)
+
         except Jobs.DoesNotExist:
             raise NotFound
 
