# backend/moni/openapi-schema.yml
@@ -74,7 +74,7 @@ paths:
         - Auth Token
   /api/v1/jobs/:
     get:
-      operationId: List all Jobs
+      operationId: List Jobs
       description: List all Jobs
       parameters: []
       responses:
@@ -91,7 +91,7 @@ paths:
       tags:
         - Jobs
     post:
-      operationId: Create new Job
+      operationId: New Job
       description: Create new Job
       parameters: []
       requestBody:
@@ -118,7 +118,7 @@ paths:
         - Jobs
   /api/v1/jobs/{uuid}/:
     get:
-      operationId: Get a Job details
+      operationId: Job details
       description: Get a Job details
       parameters:
         - name: uuid
@@ -139,7 +139,7 @@ paths:
       tags:
         - Jobs
     put:
-      operationId: Update a Job
+      operationId: Update Job
       description: Update a Job
       parameters:
         - name: uuid
@@ -171,7 +171,7 @@ paths:
       tags:
         - Jobs
     patch:
-      operationId: Partial update a Job
+      operationId: Partial update Job
       description: Partial update a Job
       parameters:
         - name: uuid
@@ -203,7 +203,7 @@ paths:
       tags:
         - Jobs
     delete:
-      operationId: Delete a Job
+      operationId: Delete Job
       description: Delete a Job
       parameters:
         - name: uuid
@@ -221,7 +221,7 @@ paths:
         - Jobs
   /api/v1/jobs/{uuid}/pause/:
     post:
-      operationId: Pause a Job
+      operationId: Pause Job
       description: Pause a Job execution
       parameters:
         - name: uuid
@@ -261,6 +261,30 @@ paths:
           description: ""
         "401":
           $ref: "#/components/responses/UnauthorizedError"
+      tags:
+        - Jobs
+  /api/v1/jobs/{uuid}/uptime/:
+    get:
+      operationId: Job uptime
+      description: Returns a job uptime (Percentage)
+      parameters:
+        - name: uuid
+          in: path
+          required: true
+          description: A unique value identifying this Jobs.
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Jobs"
+          description: ""
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+        "404":
+          description: "No such job"
       tags:
         - Jobs
   /api/v1/jobs/history/:
